--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,6 +5,7 @@
   align-items: center;
   background: var(--color-black);
   padding: 1rem 2rem;
+  position: sticky;
 }
 .app__navbar-logo {
   display: flex;
