--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -1,6 +1,8 @@
 .app__specialmenu {
   flex-direction: column;
   background: var(--color-black);
+  align-items: center;
+  justify-content: center;
 }
 .app__specialmenu-title {
   margin-bottom: 2rem;
@@ -8,9 +10,71 @@
 }
 .app__specialmenu-menu {
   width: 100%;
-  margin: 2rem 0;
+
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   flex-direction: row;
+}
+.app__specialmenu-menu_heading {
+  font-family: var(--font-base);
+  font-weight: 800;
+  font-size: 45px;
+  line-height: 58.5px;
+  letter-spacing: 0.04em;
+  color: var(--color-white);
+  text-align: center;
+}
+.app__specialmenu-menu_wine,
+.app__specialmenu-menu_cocktails {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+}
+.app__specialmenu-menu_img {
+  width: 410px;
+  margin: 0 2rem;
+}
+
+.app__specialmenu-menu_img img {
+  width: 100%;
+  height: auto;
+}
+.app__specialmenu_menu_item {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0;
+  width: 100%;
+}
+@media screen and (max-width: 2000px) {
+  /* .app__specialmenu-menu_img {
+    width: 650px;
+  }
+
+  .app__specialmenu-menu_img img {
+    height: 920px;
+  } */
+}
+@media screen and (max-width: 1150px) {
+  .app__specialmenu-menu {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  .app__specialmenu-menu_cocktails {
+    margin-top: 5rem;
+  }
+  .app__specialmenu-menu_img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 650px) {
+  .app__specialmenu-menu_img {
+    width: 100%;
+  }
+
+  .app__specialmenu-menu_heading {
+    font-size: 35px;
+    line-height: 48.5px;
+  }
 }
